adding wrapper and better structure

--- a/forsideftz.html
+++ b/forsideftz.html
@@ -7,11 +7,20 @@
 </head>
 
 <body>
-	
+	<div class="wrapper">
 	<div class="logotekst">
 		 
 	<h2>DriveClever</h2>
-	
+		
+		
+		
+		
+		
+		
+		
+		
+		
+	</div>
 	</div>
 
 </body>
