--- a/forsideftz.html
+++ b/forsideftz.html
@@ -8,19 +8,15 @@
 
 <body>
 	<div class="wrapper">
-	<div class="logotekst">
+		
+	  <div class="logotekst">
 		 
-	<h2>DriveClever</h2>
+	    <h2>DriveClever</h2>
 		
 		
 		
 		
-		
-		
-		
-		
-		
-	</div>
+	  <img src="billeder/piludenbg.png" width="469" height="310" alt="Pile"/> </div>
 	</div>
 
 </body>
