adding class to arrow image

--- a/forsideftz.html
+++ b/forsideftz.html
@@ -15,8 +15,12 @@
 		
 		
 		
+		<div class="logoimage">
+			
+	       <img src="billeder/piludenbg.png" width="100" height="50" alt="Pile"/> </div>
+		  
+		</div>
 		
-	  <img src="billeder/piludenbg.png" width="469" height="310" alt="Pile"/> </div>
 	</div>
 
 </body>
