adding backgound color and width and height

--- a/styleguide.html
+++ b/styleguide.html
@@ -11,5 +11,7 @@
 </head>
 
 <body>
+	
+	<div class="logo"><img src="billeder/piludenbg.png" width="369" height="210" alt="arrows"/></div>
 </body>
 </html>
