--- a/styleguide.html
+++ b/styleguide.html
@@ -12,6 +12,29 @@
 
 <body>
 	
-	<div class="logo"><img src="billeder/piludenbg.png" width="369" height="210" alt="arrows"/></div>
+	<header>
+		
+		        <div class="logo">
+					
+					<img src="billeder/piludenbg.png" width="200" height="100" alt="arrows"/>
+					
+		        </div>
+	
+	   <nav>
+	         <ul class="main-nav">
+				<li><a href="#branding">Branding</a></li>
+				<li><a href="#colors">Colors</a></li>
+				<li><a href="#typography">Typography</a></li>
+				<li><a href="#buttons">Buttons</a></li>
+				<li><a href="#icons">icons</a></li>
+				<li><a href="#form">Form</a></li>
+			  </ul>
+
+	   </nav>
+		
+	</header>
+	
+	
+	
 </body>
 </html>
