--- a/styleguide.html
+++ b/styleguide.html
@@ -16,13 +16,13 @@
 		
 		        <div class="logo">
 					
-					<img src="billeder/piludenbg.png" width="200" height="100" alt="arrows"/>
+					<img src="billeder/piludenbg.png" width="100" height="50" alt="arrows"/>
 					
 		        </div>
 	
 	   <nav>
 	         <ul class="main-nav">
-				<li><a href="#branding">Branding</a></li>
+				<li><a href="#branding">Logo</a></li>
 				<li><a href="#colors">Colors</a></li>
 				<li><a href="#typography">Typography</a></li>
 				<li><a href="#buttons">Buttons</a></li>
