--- a/html/styleguide.html
+++ b/html/styleguide.html
@@ -16,7 +16,7 @@
 		
 		        <div class="logo">
 					
-					<img src="../billeder/piludenbg.png" width="100" height="50" alt="arrows"/>
+					<img src="../billeder/piludenbg.png"  alt="arrows"/>
 					
 		        </div>
 	
