--- a/html/forside.html
+++ b/html/forside.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="../css/forside-css.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,600i,700,800&display=swap" rel="stylesheet"> 
 	
-<title>forside</title>
+<title>Forside</title>
 	
 </head>
 
