--- a/html/oversigt.html
+++ b/html/oversigt.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,600i,700,800&display=swap" rel="stylesheet"> 
 	<script src="https://kit.fontawesome.com/266ad4a4ba.js" crossorigin="anonymous"></script>
 	
-<title>forside</title>
+<title>Oversigt</title>
 	
 </head>
 
