Adding online button to livechat + images

--- a/html/livechat.html
+++ b/html/livechat.html
@@ -12,14 +12,15 @@
 
 <body>
 	
-    <nav>
+<nav>
 		
 		<div class="menu">
-			<h2>LiveChat</h2>
-			<h3>ÅBEN -Lukker 16.00</h3>
+			
+		  <h2>LiveChat</h2>
+			<h3><img src="../billeder/Ellipse 1.png" width="12" height="12" alt="Online Button"/>ÅBEN -Lukker 16.00</h3>
 		</div>
 		
-    </nav>
+</nav>
 	
      <section>
 		
