Adding hr to bottom and adjusting height on icons

--- a/html/livechat.html
+++ b/html/livechat.html
@@ -76,7 +76,9 @@
      </section>
 	
           <footer>
+			  <hr class="hr1">
 		       <section id="icons" class="icons">
+				   
 
 			             <ul class="box-icon">
                             <li><img src="../billeder/photo-camera.png" alt="Kamera"/></li>
