Fejlside img changed

--- a/html/fejlside.html
+++ b/html/fejlside.html
@@ -23,12 +23,12 @@
 		
 		  
 		<div class="pile">
-	         <img src="../billeder/piludenbg.png" alt="Pile"/>
+	         <img src="../billeder/fejl404.png" alt="Pile"/>
 		</div>
 		  
 		
 		<div class="tekstbox">
-			<h2>Ups, vi har vist haft et uheld... <br><br>
+			<h2>Ups, vi har vist haft et uheld... <br>
 			<a href="forside.html">Tilbage til forsiden</a>
 			</h2>
 		</div>
