Added reference comments

--- a/html/oversigt.html
+++ b/html/oversigt.html
@@ -33,7 +33,8 @@
 			<div class="slideText"><p>Brændstof 67% fuld</p></div>
 		</div>
 		
-		
+		<!-- 	Grid code inspired by: 
+			 	https://www.w3schools.com/css/tryit.asp?filename=trycss_grid -->
 		<div class="bottom">
 			<div class="grid-container">
 				  <div class="grid-item">
