--- a/html/oversigt.html
+++ b/html/oversigt.html
@@ -56,6 +56,8 @@
 	
 	
 	<footer>
+		<!-- 	Icons from: 
+			 	https://fontawesome.com/icons?d=gallery -->
 		<div class="icons">
 			<a href="#"><i class="fas fa-car fa-2x"></i></a>
 			<a href="#"><i class="fas fa-question-circle fa-2x"></i></a>
