--- a/html/oversigt.html
+++ b/html/oversigt.html
@@ -16,7 +16,7 @@
 	<nav>
 		<div class="menu">
 			<a href="#"><i class="fas fa-bars fa-2x"></i></a>
-			<img src="../billeder/logo2.png" alt="Logo for DriveClever">
+			<img src="../billeder/logo1.png" alt="Logo for DriveClever">
 			<a href="#"><i class="far fa-bell fa-2x"></i></a>
 		</div>
 		
@@ -30,7 +30,13 @@
 	<section>
 		
 		<div class="top">
-			<div class="slideText"><p>Brændstof 67% fuld</p></div>
+			<div class="slideText">
+				<p>Brændstof 67 % fuld</p>
+				<p>Sprinkler 21 %</p>
+				<p>Olieskift om 489 dage</p>
+				<p>Dæktryk 231 kPa</p>
+				<p>Batteri 11.8 V</p>
+			</div>
 		</div>
 		
 		<!-- 	Grid code inspired by: 
@@ -64,6 +70,21 @@
 			<a href="#"><i class="fas fa-user-circle fa-2x"></i></a>
 		</div>
 	</footer>
+	
+	<!-- 	JavaScript code inspired by: 
+			https://stackoverflow.com/questions/36184252/javascript-only-li-text-slider -->
+	<script>
+		var current = 0,
+    		slides = document.getElementsByTagName("p");
+
+		setInterval(function() {
+			for (var i = 0; i < slides.length; i++) {
+			slides[i].style.opacity = 0;
+			}
+			current = (current != slides.length - 1) ? current + 1 : 0;
+			slides[current].style.opacity = 1;
+		}, 2000);
+	</script>
 	
 </body>
 </html>
