Background image edited

--- a/html/oversigt.html
+++ b/html/oversigt.html
@@ -27,7 +27,7 @@
 	</nav>
 	
 	
-	<section>
+	<div class="section">
 		
 		<div class="top">
 			<div class="slideText">
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 		
-	</section>
+	</div>
 	
 	
 	<footer>
