--- a/html/livechat.html
+++ b/html/livechat.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="dk">
 <head>
 <meta charset="utf-8">
 	
@@ -17,8 +17,8 @@
 		<div class="menu">
 			
 		  <h2>LiveChat</h2>
-			
-			  <h3><img src="../billeder/Ellipse 1.png" width="12" height="12" alt="Online Button"/>ÅBEN -Lukker 16.00</h3>
+		
+			<h3><img src="../billeder/Ellipse 1.png" width="12" height="12" alt="Online"/>ÅBEN -Lukker 16.00</h3>
 		</div>
 		
 </nav>
@@ -83,7 +83,7 @@
 			             <ul class="box-icon">
                             <li><img src="../billeder/photo-camera.png" alt="Kamera"/></li>
 			                <li><img src="../billeder/image-regular.png" alt="Billed"/></li>
-                            <li><img src="../billeder/Group 34.png"  alt="Skriv Besked"/></li>
+                            <li><img src="../billeder/Group 34.png"  alt="Skriv"/></li>
 			             </ul>
 				
 		       </section>
