--- a/html/livechat.html
+++ b/html/livechat.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="dk">
+<html lang="da">
 <head>
 <meta charset="utf-8">
 	
@@ -83,7 +83,7 @@
 			             <ul class="box-icon">
                             <li><img src="../billeder/photo-camera.png" alt="Kamera"/></li>
 			                <li><img src="../billeder/image-regular.png" alt="Billed"/></li>
-                            <li><img src="../billeder/Group 34.png"  alt="Skriv"/></li>
+                            <li><img src="../billeder/Group 34.png" alt="Skriv"/></li>
 			             </ul>
 				
 		       </section>
