--- a/html/livechat.html
+++ b/html/livechat.html
@@ -80,7 +80,7 @@
           <footer>
 			  <hr class="hr1">
 			  
-		       <section id="icons" class="icons">
+		       <div id="icons" class="icons">
 
 			             <ul class="box-icon">
                             <li><img src="../billeder/photo-camera.png" alt="Kamera"/></li>
@@ -88,7 +88,7 @@
                             <li><img src="../billeder/Group 34.png" alt="Skriv"/></li>
 			             </ul>
 				
-		       </section>
+		       </div>
           </footer>
 	
 	
