validate images onto page livechat

--- a/html/livechat.html
+++ b/html/livechat.html
@@ -20,7 +20,7 @@
 			
 		  <h2>LiveChat</h2>
 		
-			<h3><img src="../billeder/Ellipse 1.png" width="12" height="12" alt="Online"/>ÅBEN -Lukker 16.00</h3>
+			<h3><img src="../billeder/elipse.png" width="12" height="12" alt="Online"/>ÅBEN -Lukker 16.00</h3>
 		</div>
 		
 </nav>
@@ -85,7 +85,7 @@
 			             <ul class="box-icon">
                             <li><img src="../billeder/photo-camera.png" alt="Kamera"/></li>
 			                <li><img src="../billeder/image-regular.png" alt="Billed"/></li>
-                            <li><img src="../billeder/Group 34.png" alt="Skriv"/></li>
+                            <li><img src="../billeder/searchbar.png" alt="Search"/></li>
 			             </ul>
 				
 		       </div>
