Code order edited

--- a/html/fejlside.html
+++ b/html/fejlside.html
@@ -1,23 +1,28 @@
 <!doctype html>
 <html lang="da">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../css/fejlside-css.css">
-<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,600i,700,800&display=swap" rel="stylesheet">
-<title>Forside</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../css/fejlside-css.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,600i,700,800&display=swap" rel="stylesheet">
+	<title>Forside</title>
 </head>
 
 <body>
-<h1>Page not found <br>
-404</h1>
-<div class="wrapper">
-<div class="logo"> <img src="../billeder/logo1.png" alt="DriveClever logo"/> </div>
-<div class="pile"> <img src="../billeder/fejl404.png" alt="Pile"/> </div>
-<div class="tekstbox">
-<h2>Ups, vi har vist haft et uheld... <br>
-<a href="forside.html">Tilbage til forsiden</a> </h2>
-</div>
-</div>
+	<h1>
+		Page not found<br>404
+	</h1>
+	<div class="wrapper">
+		<div class="logo"> 
+			<img src="../billeder/logo1.png" alt="DriveClever logo"/> 
+		</div>
+		<div class="pile"> 
+			<img src="../billeder/fejl404.png" alt="Pile"/> 
+		</div>
+		<div class="tekstbox">
+			<h2>Ups, vi har vist haft et uheld...</h2>
+			<h2><a href="forside.html">Tilbage til forsiden</a></h2>
+		</div>
+	</div>
 </body>
 </html>
