--- a/html/oversigt.html
+++ b/html/oversigt.html
@@ -38,10 +38,11 @@
 				<div class="grid-container">
 						<div class="grid-item">
 							<img src="../billeder/vaerksted.png" alt="Værksted">
-							<p class="grid-text">Værksted</p>
+							<p>Værksted</p>
 						</div>
 						<div class="grid-item">
-							<img src="../billeder/forsikring.png" alt="Forsikring"><p>Forsikring</p>
+							<img src="../billeder/forsikring.png" alt="Forsikring">
+							<p>Forsikring</p>
 						</div>
 						<div class="grid-item">
 							<img src="../billeder/kalender.png" alt="Kalender">
@@ -56,8 +57,10 @@
 							<p>Shop</p>
 						</div>
 						<div class="grid-item">
-							<img src="../billeder/benzinkort.png" alt="Benzinkort">
-							<p>Benzinkort</p>
+							<a href="livechat.html">
+								<img src="../billeder/chat@2x.png" alt="Benzinkort">
+								<p>Chat</p>
+							</a>
 						</div> 
 				</div>
 			</div>
@@ -67,7 +70,7 @@
 					https://fontawesome.com/icons?d=gallery -->
 			<div class="icons">
 				<a href="#"><i class="fas fa-car fa-2x"></i></a>
-				<a href="#"><i class="fas fa-question-circle fa-2x"></i></a>
+				<a href="#"><i class="fas fa-exclamation-triangle fa-2x"></i></a>
 				<a href="#"><i class="fas fa-user-circle fa-2x"></i></a>
 			</div>
 		</footer>
