--- a/html/addcar.html
+++ b/html/addcar.html
@@ -6,7 +6,11 @@
 </head>
 
 <body>
-	<input type="text" placeholder="add your car" id="test" oninput="addcars()">
+	<p><h2>Tilføj bil</h2></p>
+<input type="text" placeholder="Navn" id="1">
+	<br>
+	<br>
+	<input type="text" placeholder="Nummerplade" id="test" oninput="addcars()">
 
 	<p id="info"></p>
 	
@@ -20,6 +24,8 @@ var data = ["a", "b", "c"];
 					alert ("That doesn't seem right");
 					}
 					}
-	</script>
+</script>
+	
+	<button type="button">færdig</button>
 </body>
 </html>
