Chat icons added

--- a/html/oversigt.html
+++ b/html/oversigt.html
@@ -26,7 +26,7 @@
 			<div class="top">
 				<div class="slideText">
 					<p class="slideTextt">Brændstof 67 % fuld</p>
-					<p class="slideTextt">Sprinkler 21 %</p>
+					<p class="slideTextt">Sprinkler 21 % tilbage</p>
 					<p class="slideTextt">Olieskift om 489 dage</p>
 					<p class="slideTextt">Dæktryk 231 kPa</p>
 					<p class="slideTextt">Batteri 11.8 V</p>
@@ -71,7 +71,7 @@
 			<div class="icons">
 				<a href="#"><i class="fas fa-car fa-2x"></i></a>
 				<a href="#"><i class="fas fa-exclamation-triangle fa-2x"></i></a>
-				<a href="#"><i class="fas fa-user-circle fa-2x"></i></a>
+				<a href="#"><i class="fas fa-user-alt fa-2x"></i></a>
 			</div>
 		</footer>
 	</div>
