Chat icon added to Oversigt

--- a/html/oversigt.html
+++ b/html/oversigt.html
@@ -58,7 +58,7 @@
 						</div>
 						<div class="grid-item">
 							<a href="livechat.html">
-								<img src="../billeder/chat@2x.png" alt="Benzinkort">
+								<img src="../billeder/chat-sort.png" alt="Benzinkort">
 								<p>Chat</p>
 							</a>
 						</div> 
