--- a/html/oversigt.html
+++ b/html/oversigt.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<nav>
 			<div class="menu">
-				<a href="#"><i class="fas fa-bars fa-2x"></i></a>
+				<a href="forside.html"><i class="fas fa-bars fa-2x"></i></a>
 				<img src="../billeder/logo1.png" alt="Logo for DriveClever">
 				<a href="#"><i class="far fa-bell fa-2x"></i></a>
 			</div>
