procent visning på progress bar

--- a/html/progress-bar.html
+++ b/html/progress-bar.html
@@ -10,9 +10,7 @@
 </head>
     
      <div id="myProgress">
-    <div id="myBar">
-
-    </div>
+     <div id="myBar">10%</div>
     </div>
 	
 <body>
