Link to Oversigt added

--- a/html/addcar.html
+++ b/html/addcar.html
@@ -26,6 +26,6 @@ var data = ["a", "b", "c"];
 					}
 </script>
 	
-	<button type="button">færdig</button>
+	<a href="oversigt.html"><button type="button">færdig</button></a>
 </body>
 </html>
