--- a/html/forside.html
+++ b/html/forside.html
@@ -14,7 +14,9 @@
 	         <img src="../billeder/logo1.png" alt="DriveClever logo"/>
 	     </div>  
 		 <div class="pile">
-	         <img src="../billeder/piludenbg.png" alt="Pile"/>
+	         <a href="addcar.html">
+			 	<img src="../billeder/piludenbg.png" alt="Pile"/>
+			 </a>
 		 </div>
 	</div>
 </body>
