--- a/html/livechat.html
+++ b/html/livechat.html
@@ -12,8 +12,8 @@
 		<section>	
 			<nav>
 			<div class="menu">
-				<h2>LiveChat</h2>
-				<h3><img src="../billeder/elipse.png" width="12" height="12" alt="Online"/>ÅBEN -Lukker 16.00</h3>
+				<a href="oversigt.html"><h2>LiveChat</h2></a>
+				<a href="oversigt.html"><h3><img src="../billeder/elipse.png" width="12" height="12" alt="Online"/>ÅBEN -Lukker 16.00</h3></a>
 			</div>
 			</nav>
 
@@ -60,9 +60,9 @@
 	<footer>
 		<div id="icons" class="icons">
 			<ul class="box-icon">
-				<li><img src="../billeder/photo-camera.png" alt="Kamera"/></li>
-				<li><img src="../billeder/image-regular.png" alt="Billed"/></li>
-				<li><img src="../billeder/searchbar.png" alt="Search"/></li>
+				<li><a href="oversigt.html"><img src="../billeder/photo-camera.png" alt="Kamera"/></a></li>
+				<li><a href="oversigt.html"><img src="../billeder/image-regular.png" alt="Billed"/></a></li>
+				<li><a href="oversigt.html"><img src="../billeder/searchbar.png" alt="Search"/></a></li>
 			</ul>
 		</div>
 	</footer>
