--- a/html/progress-bar.html
+++ b/html/progress-bar.html
@@ -8,12 +8,21 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,600i,700,800&display=swap" rel="stylesheet"> 
 	<title>Forside</title>
 </head>
-    
-     <div id="myProgress">
+    <body>
+	
+
+    <div class="wrapper">
+	     <div class="logo">
+	         <img src="../billeder/logo1.png" alt="DriveClever logo"/>
+	     </div>  
+		 <div id="myProgress">
      <div id="myBar">10%</div>
     </div>
+		 
+	</div>
+    <script src="../javascript/progressbar-javascript.js"></script>
+			
 	
-<body>
-	
+    
 </body>
 </html>
