--- a/html/progress-bar.html
+++ b/html/progress-bar.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="../css/forside-css.css">
     <link rel="stylesheet" href="../css/progress-bar.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,600i,700,800&display=swap" rel="stylesheet"> 
-	<title>Forside</title>
+	<title>Progress bar</title>
 </head>
     <body>
 	
