opdateret progress bar

--- a/html/progress-bar.html
+++ b/html/progress-bar.html
@@ -2,7 +2,7 @@
 <html lang="da">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">			
 	<link rel="stylesheet" href="../css/forside-css.css">
     <link rel="stylesheet" href="../css/progress-bar.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,600i,700,800&display=swap" rel="stylesheet"> 
@@ -20,9 +20,9 @@
     </div>
 		 
 	</div>
-    <script src="../javascript/progressbar-javascript.js"></script>
-			
-	
-    
+   
+	        <script src="file:///Instaprint%20HD/Users/julieandersen/Desktop/FTZ/javascript/progressbar-javascript.js"></script>
+
+ 
 </body>
 </html>
