--- a/html/oversigt.html
+++ b/html/oversigt.html
@@ -24,12 +24,12 @@
 		</nav>
 		<div class="section">
 			<div class="top">
-				<div class="slideText">
-					<p class="slideTextt">Brændstof 67 % fuld</p>
-					<p class="slideTextt">Sprinkler 21 % tilbage</p>
-					<p class="slideTextt">Olieskift om 489 dage</p>
-					<p class="slideTextt">Dæktryk 231 kPa</p>
-					<p class="slideTextt">Batteri 11.8 V</p>
+				<div class="slideBox">
+					<p class="slideText">Brændstof 67 % fuld</p>
+					<p class="slideText">Sprinkler 21 % tilbage</p>
+					<p class="slideText">Olieskift om 489 dage</p>
+					<p class="slideText">Dæktryk 231 kPa</p>
+					<p class="slideText">Batteri 11.8 V</p>
 				</div>
 			</div>
 			<div class="bottom">
