opdateret progress bar uden knap

--- a/html/progress-bar.html
+++ b/html/progress-bar.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,600i,700,800&display=swap" rel="stylesheet"> 
 	<title>Progress bar</title>
 </head>
-    <body>
+        <body onload="move()">
 	
 
     <div class="wrapper">
@@ -19,8 +19,6 @@
   <div id="myBar">10%</div>
 </div>
 
-<br>
-<button onclick="move()">Klik her</button> 
 
 <script>
 var i = 0;
@@ -42,7 +40,8 @@ function move() {
     }
   }
 }
+    
 </script>
- 
+        </div>
 </body>
 </html>
