--- a/html/livechat.html
+++ b/html/livechat.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,600i,700,800&display=swap" rel="stylesheet"> 
 	<title>Live Chat</title>
 </head>
+		<!-- This code is made by Tiffany Møller -->
 <body>
 	<div class="container">
 		<section>	
