linket progress bar og chatroom sammen

--- a/html/chatroom.html
+++ b/html/chatroom.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../chatroom-css.css">
+	<link rel="stylesheet" href="../css/chatroom-css.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,600i,700,800&display=swap" rel="stylesheet"> 
 	<title>Live Chat</title>
 </head>
-		<!-- This code is made by Julie Bové (Tiffany Møller) -->
+		<!-- Denne kode er lavet af Julie Bové (med hjælp fra Tiffany Møller) -->
 <body>
 	<div class="container">
 		<section>	
@@ -20,7 +20,7 @@
 
 			<div class="top">
 			</div>
-
+<!-- Denne kode er inspireret af - W3schools chat -->
 			 <div class="chat">
   
                   <p2>Hej Brian, hvordan kan vi hjælp dig i dag? <br> Mvh Stefan</p2>
