--- a/html/progress-bar.html
+++ b/html/progress-bar.html
@@ -22,6 +22,8 @@
 
 <script>
 var i = 0;
+    setTimeout(function(){ window.location.href = "chatroom.html"; }, 1000);
+    
 function move() {
   if (i == 0) {
     i = 1;
