Linket button til progress bar

--- a/html/addcar.html
+++ b/html/addcar.html
@@ -27,7 +27,7 @@
 	<p><h5>Tilføj forsikringsoplysninger?<br>
 	Tilføj vejhjælps abonnement?</h5></p>
 
-	<button type="button">FÆRDIG</button>
+	<button type="button"><a href="progress-bar.html">FÆRDIG</a></button>
 	</wrapper>
 <script>
 		function addcars(){
