--- a/html/addcar.html
+++ b/html/addcar.html
@@ -29,16 +29,6 @@
 
 	<button type="button"><a href="progress-bar.html">FÆRDIG</a></button>
 	</wrapper>
-<script>
-		function addcars(){
-			var data = ["Volkswagen Golf VI","1,4 TSI 122 Highline Variant DSG 5d", "Modelår: 2012", "166.551 km, 122 hk / 200 Nm"];
-			if (document.getElementById("test").innerHTML != null) {
-					document.getElementById("info").innerHTML = data;
-					}
-					else {
-					alert ("That doesn't seem right");
-					}
-					}
-</script>
+<script src="../javascript/addcar-js.js"></script>
 </body>
 </html>
