opdateret link til progress bar fra addcar html

--- a/html/addcar.html
+++ b/html/addcar.html
@@ -27,7 +27,7 @@
 	<p><h5>Tilføj forsikringsoplysninger?<br>
 	Tilføj vejhjælps abonnement?</h5></p>
 
-	<button type="button"><a href="progress-bar.html">FÆRDIG</a></button>
+	<button type="button"><a href="progress-bar2.html">FÆRDIG</a></button>
 	</wrapper>
 <script src="../javascript/addcar-js.js"></script>
 </body>
