--- a/html/chatroom.html
+++ b/html/chatroom.html
@@ -23,7 +23,7 @@
 <!-- Denne kode er inspireret af - W3schools chat -->
 			 <div class="chat">
   
-                <p2>Hej Brian, hvordan kan vi hjælp dig i dag? <br> Mvh Stefan</p2>
+                <p2>Hej Brian, hvordan kan vi hjælpe dig i dag? <br> Mvh Stefan</p2>
                 <span class="time">12:31 Stefan Rasmussen, Odense Autoværksted ApS</span>
              </div>    
 		</section>
