Forside linked to add-car

--- a/html/forside.html
+++ b/html/forside.html
@@ -11,10 +11,14 @@
 <body>
 	<div class="wrapper">
 	     <div class="logo">
-	         <img src="../billeder/logo1.png" alt="DriveClever logo"/>
+	         <a href="addcar.html">
+				 <img src="../billeder/logo1.png" alt="DriveClever logo"/>
+			 </a>
 	     </div>  
 		 <div class="pile">
-	         <img src="../billeder/piludenbg.png" alt="Pile"/>
+	         <a href="addcar.html">
+				 <img src="../billeder/piludenbg.png" alt="Pile"/>
+			 </a>
 		 </div>
 	</div>
 </body>
