opdateret java da det driller

--- a/html/progress-bar2.html
+++ b/html/progress-bar2.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="../css/forside-css.css">
     <link rel="stylesheet" href="../css/progress-bar.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,600i,700,800&display=swap" rel="stylesheet"> 
-    <script src="../javascript/progressbar-javascript.js" defer></script>
+    <script src="../javascript/progressbar-javascript-2.js"></script>
     
 	<title>Progress bar</title>
 </head>
@@ -17,8 +17,7 @@
 	       <img src="../billeder/logo1.png" alt="DriveClever logo"/>
 	   </div>  
        <div id="myProgress">
-          <div id="myBar">10%
-          </div>
+          <div id="myBar">10%</div>
        </div>
     </div>
 </body>
