ændret html og css for addcar til at validere

--- a/html/addcar.html
+++ b/html/addcar.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <title>addcar</title>
@@ -8,10 +8,9 @@
 </head>
 
 <body>
-	<wrapper>
+	<section>
 		<div class="top">
-			<p><h2>TILFØJ BIL</h2></p>
-		
+			<h2>TILFØJ BIL</h2>
 		<div class="container1">
 			<p>Navn</p>
 			<input type="text" placeholder="Navn" id="1">
@@ -24,11 +23,10 @@
 		</div>
 	</div>
 	
-	<p><h5>Tilføj forsikringsoplysninger?<br>
-	Tilføj vejhjælps abonnement?</h5></p>
-
-	<button type="button"><a href="progress-bar2.html">FÆRDIG</a></button>
-	</wrapper>
+	<h5>Tilføj forsikringsoplysninger?<br>
+	Tilføj vejhjælps abonnement?</h5>
+<button onclick="window.location.href = 'progress-bar2.html';">FÆRDIG</button>
+	</section>
 <script src="../javascript/addcar-js.js"></script>
 </body>
 </html>
