Link added to submenu

--- a/html/livechat.html
+++ b/html/livechat.html
@@ -51,7 +51,7 @@
 				<div class="panel">
 					<ul>
 						<li><p>Livechat med dit valgte værksted</p></li>
-						<li><p>Ændre favorit værksted</p></li>
+						<a href="chatroom.html"><li><p>Ændre favorit værksted</p></li></a>
 					</ul>
 				</div>
 				<hr class="hr1">
