--- a/html/addcar.html
+++ b/html/addcar.html
@@ -17,7 +17,7 @@
 			<p>Nummerplade</p>
 			<input type="text" placeholder="Nummerplade" id="test" oninput="addcars()">
 		</div>
-		<div class="container">
+		<div class="container2">
 			<p>Hentet fra database</p>
 			<p id="info"></p>
 		</div>
