Add-car made responsive

--- a/html/addcar.html
+++ b/html/addcar.html
@@ -11,15 +11,17 @@
 	<section>
 		<div class="top">
 			<h2>TILFØJ BIL</h2>
-		<div class="container1">
-			<p>Navn</p>
-			<input type="text" placeholder="Navn" id="1">
-			<p>Nummerplade</p>
-			<input type="text" placeholder="Nummerplade" id="test" oninput="addcars()">
-		</div>
-		<div class="container2">
-			<p>Hentet fra database</p>
-			<p id="info"></p>
+		<div class="flexbox">
+			<div class="container1">
+				<p>Navn</p>
+				<input type="text" placeholder="Navn" id="1">
+				<p>Nummerplade</p>
+				<input type="text" placeholder="Nummerplade" id="test" oninput="addcars()">
+			</div>
+			<div class="container2">
+				<p>Hentet fra database</p>
+				<p id="info"></p>
+			</div>
 		</div>
 	</div>
 	
