--- a/html/livechat.html
+++ b/html/livechat.html
@@ -50,8 +50,10 @@
 				<button class="accordion">Chat med værksted</button>
 				<div class="panel">
 					<ul>
-						<li><p>Livechat med dit valgte værksted</p></li>
-						<a href="chatroom.html"><li><p>Ændre favorit værksted</p></li></a>
+						<a href="chatroom.html"><li>
+							<p>Livechat med dit valgte værksted</p></li>
+						</a>
+						<li><p>Ændre favorit værksted</p></li>
 					</ul>
 				</div>
 				<hr class="hr1">
