--- a/html/oversigt.html
+++ b/html/oversigt.html
@@ -57,7 +57,7 @@
 							<p>Shop</p>
 						</div>
 						<div class="grid-item">
-							<a href="livechat.html">
+							<a href="progress-bar2.html">
 								<img src="../billeder/chat-sort.png" alt="Benzinkort">
 								<p>Chat</p>
 							</a>
