--- a/html/addcar.html
+++ b/html/addcar.html
@@ -27,7 +27,7 @@
 	
 	<h5>Tilføj forsikringsoplysninger?<br>
 	Tilføj vejhjælps abonnement?</h5>
-<button onclick="window.location.href = 'progress-bar2.html';">FÆRDIG</button>
+<button onclick="window.location.href = 'progress-bar.html';">FÆRDIG</button>
 	</section>
 <script src="../javascript/addcar-js.js"></script>
 </body>
