links edited according to verification

--- a/html/livechat.html
+++ b/html/livechat.html
@@ -50,9 +50,11 @@
 				<button class="accordion">Chat med værksted</button>
 				<div class="panel">
 					<ul>
-						<a href="chatroom.html"><li>
-							<p>Livechat med dit valgte værksted</p></li>
-						</a>
+						<li><a href="chatroom.html">
+								<p>Livechat med dit valgte værksted</p>
+							</a>
+						</li>
+						
 						<li><p>Ændre favorit værksted</p></li>
 					</ul>
 				</div>
