--- a/html/chatroom.html
+++ b/html/chatroom.html
@@ -32,7 +32,7 @@
 			<ul class="box-icon">
 				<li><img src="../billeder/photo-camera.png" alt="kamera"/></li>
 				<li><img src="../billeder/image-regular.png" alt="regular"/></li>
-				<a href="oversigt.html"><li><img src="../billeder/searchbar.png" alt="searchbar"/></li></a>
+				<li><a href="oversigt.html"><img src="../billeder/searchbar.png" alt="searchbar"/></a></li>
 			</ul>
 		</div>
 	</footer>
