--- a/html/addcar.html
+++ b/html/addcar.html
@@ -16,7 +16,7 @@
 				<p>Navn</p>
 				<input type="text" placeholder="Navn" id="1">
 			  <p>Nummerplade</p>
-				<input type="text" placeholder="Nummerplade" maxlength="8" id="test" onkeyup="addcars()">
+				<input type="text" placeholder="Nummerplade" maxlength="8" id="Nummerplade" onkeyup="addcars()">
 				<h4 id="error"></h4>
 			</div>
 			<div class="container2">
