--- a/html/livestyleguide.html
+++ b/html/livestyleguide.html
@@ -644,6 +644,8 @@
 	  <!-- Forms/Input Section -->
 	<section class="formsSection" id="formsSection">
 		<h2>Forms/Input</h2><br>
+		<div class="image-box">
+	    <img src="../billeder/container 2.png" alt="Form"/> </div>
 	</section>
     </main>
 </body>
