Adding right button

--- a/html/livestyleguide.html
+++ b/html/livestyleguide.html
@@ -136,13 +136,7 @@
 
 		<!-- Remember to change buttons, once we have decided which ti use! -->
 
-		<div class="box">
-		<div class="button"><a href="../../../../FTZ/javascript/pinlogin.html">LOGIN</a>
-		</div>
-
-		<input type="button" name="next" class="next action-button" value="Next Step"/>
-
-		</div>
+		<input type="button" name="next" class="next action-button" value="Færdig"/>
 
 	</section>
 	</section>
